# tms-experiment-dashboard

./: .gitigonore  README.md  experiment_config.txt  experiment_details.csv  main.py  main_loop.py  main_nicegui.py  nice_details.csv  pyproject.toml  setup.py  web_UI_streamlit_trials.py
docs/: bittium_neurOne.md
nicegui/: main_nicegui.py
scripts/: relay_server.py
src/tms_dashboard/: __init__.py  config.py  constants.py
src/tms_dashboard/core/: dashboard_state.py  data_logger.py  message_emit.py  message_handler.py  robot_config_state.py  socket_client.py
src/tms_dashboard/core/components/: emg_connection.py
src/tms_dashboard/core/modules/: emg_connection.py  socket_client.py
src/tms_dashboard/nicegui_app/: main.py  run.py  styles.py  update_dashboard.py
src/tms_dashboard/nicegui_app/components/: __init__.py  checklist_tab.py  dashboard_tabs.py  experiment_form.py  header.py
src/tms_dashboard/nicegui_app/components/widgets/: status_widgets.py
src/tms_dashboard/nicegui_app/ui/: __init__.py  dashboard_tabs.py  experiment_form.py  header.py
src/tms_dashboard/nicegui_app/ui/widgets/: navigation_3d.py  navigation_controls.py  robot_dialog.py  status_widgets.py  time_series_panel.py
src/tms_dashboard/streamlit_app/: run.py
src/tms_dashboard/utils/: constants.py  signal_processing.py
