[project]
name = "tms-experiment-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-socketio==5.3.0",
    "uvicorn",
    "nest-asyncio",
    "requests",
    "websocket-client",
    "websockets",
    "numpy",
    "opencv-python",
    "pynput",
    "matplotlib",
    "scipy",
    "python-dotenv",
    "nicegui>=1.3.16",
]
