[project]
name = "tms-experiment-dashboard"
version = "0.2.0"
description = "Dashboard para experimentos TMS com suporte dual framework (NiceGUI/Streamlit)"
readme = "README.md"
requires-python = ">=3.11"

# Core dependencies (always installed)
dependencies = [
    "python-socketio==5.3.0",
    "uvicorn",
    "nest-asyncio",
    "requests",
    "websocket-client",
    "websockets",
    "numpy",
    "opencv-python",
    "pynput",
    "matplotlib",
    "scipy",
    "python-dotenv",
]

# Optional framework dependencies
[project.optional-dependencies]
nicegui = ["nicegui>=1.3.16"]
streamlit = ["streamlit"]
all = ["nicegui>=1.3.16", "streamlit"]

[project.scripts]
tms-dashboard = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
